visibility fix

--- a/front/src/styles/home.scss
+++ b/front/src/styles/home.scss
@@ -1,33 +1,71 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
-.navigatorSide{
-    width:50px;
-    height:100vh;
+.navigatorSide {
+    width: 50px;
+    height: 100vh;
     align-items: center;
-    i{
+
+    i {
         color: rgb(114, 114, 114);
-        margin:10px;  
-        height:50px;  
-        font-size:25pt;
+        margin: 10px;
+        height: 50px;
+        font-size: 25pt;
         transition: all ease-in-out 0.1s;
     }
-    i:hover{
+
+    i:hover {
         color: white;
         cursor: pointer;
-        font-size:30pt;
+        font-size: 30pt;
     }
-    .separator{
+
+    .separator {
         background-color: rgb(114, 114, 114);
-        width:90%;
-        height:2px;
+        width: 90%;
+        height: 2px;
     }
 }
 
-.tableContainer{
-    width:calc(100% - 50px);
-    height:100vh !important;
-    max-height:100vh !important;
-    overflow:scroll;
-    background-color: rgb(233, 233, 233);
+.tableContainer {
+    width: calc(100% - 50px);
+    height: 100vh !important;
+    max-height: 100vh !important;
+    overflow: scroll !important;
+    // background-color: rgb(233, 233, 233);
 
 }
+
+.table-responsive,
+.table {
+    overflow: unset !important;
+}
+
+.table tbody:nth-child(2n+1) {
+    background-color: rgb(158, 158, 158);
+}
+
+// scroll
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+}
+
+// /* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: rgb(158, 158, 158);
+    width: 3px;
+    border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: black;
+}
+//for table header 
+// .tableHeader{
+// }
